--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,16 @@
 name: Metrics
 on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # Запуск ежедневно
+  schedule:
+    - cron: "0 0 * * *"
+  # Ручной запуск
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+  # Запуск при пуше в ветки master или main
+  push:
+    branches:
+      - master
+      - main
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -14,28 +19,25 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      # Клонируем репозиторий
+      - uses: actions/checkout@v3
+
+      # Генерация календаря на весь год
+      - name: Full-year calendar
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.isocalendar.fullyear.svg
+          base: ""
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
 
-name: Full-year calendar
-uses: lowlighter/metrics@latest
-with:
-  filename: metrics.plugin.isocalendar.fullyear.svg
-  token: ${{ secrets.METRICS_TOKEN }}
-  base: ""
-  plugin_isocalendar: yes
-  plugin_isocalendar_duration: full-year
-
-
-name: Most used
-uses: lowlighter/metrics@latest
-with:
-  filename: metrics.plugin.languages.svg
-  token: ${{ secrets.METRICS_TOKEN }}
-  base: ""
-  plugin_languages: yes
-  plugin_languages_limit: 100
-
-
-
+      # Генерация метрики с наиболее используемыми языками
+      - name: Most used languages
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          filename: metrics.plugin.languages.svg
+          base: ""
+          plugin_languages: yes
+          plugin_languages_limit: 100
