--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           filename: metrics.plugin.isocalendar.fullyear.svg
           base: ""
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          plugin_isocalendar_duration: half-year
 
       # Генерация метрики с наиболее используемыми языками
       - name: Most used languages
@@ -40,3 +40,4 @@ jobs:
           filename: metrics.plugin.languages.svg
           base: ""
           plugin_languages: yes
+          plugin_languages_threshold: 0.00000%
