--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,8 @@ jobs:
     permissions:
       contents: write
     steps:
-      # Клонируем репозиторий
       - uses: actions/checkout@v3
 
-      # Генерация календаря на весь год
       - name: Full-year calendar
         uses: lowlighter/metrics@latest
         with:
@@ -32,7 +30,6 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
 
-      # Генерация метрики с наиболее используемыми языками
       - name: Most used languages
         uses: lowlighter/metrics@latest
         with:
@@ -42,7 +39,6 @@ jobs:
           plugin_languages: yes
           plugin_languages_threshold: 0.00000%
           
-      
       - name: Recent activity charts
         uses: lowlighter/metrics@latest
         with:
@@ -62,4 +58,31 @@ jobs:
           base: ""
           plugin_achievements: yes
           plugin_achievements_only: sponsor, maintainer, octonaut
+
+      - name: Repositories traffic
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.traffic.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: repositories
+          plugin_traffic: yes
+
+      - name: WakaTime
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.wakatime.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_wakatime: yes
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
+
+      - name: LeetCode
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.leetcode.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_leetcode: yes
+          plugin_leetcode_sections: solved, skills, recent
 
