--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,13 @@
 name: Metrics
 on:
-  # Запуск ежедневно
   schedule:
-    - cron: "0 0 * * *"
-  # Ручной запуск
+    - cron: "*/15 * * * *"
   workflow_dispatch:
-  # Запуск при пуше в ветки master или main
   push:
     branches:
       - master
       - main
-
+      
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -37,7 +34,16 @@ jobs:
           filename: metrics.plugin.languages.svg
           base: ""
           plugin_languages: yes
-          plugin_languages_threshold: 0.00000%
+          plugin_languages_threshold: 0.00001%
+          plugin_languages_limit: 30
+          plugin_languages_other: yes
+          plugin_languages_indepth: yes
+          plugin_languages_details: bytes-size, percentage, lines
+          plugin_languages_categories: programming, markup, data, prose
+          plugin_languages_recent_categories: programming, markup
+          plugin_languages_recent_days: 0
+          plugin_languages_analysis_timeout: 60
+          plugin_languages_analysis_timeout_repositories: 15
           
       - name: Recent activity charts
         uses: lowlighter/metrics@latest
@@ -46,9 +52,15 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_habits: yes
+          plugin_habits_from: 1000
+          plugin_habits_days: 30
           plugin_habits_facts: yes
           plugin_habits_charts: yes
-          config_timezone: Russia/Moscow
+          plugin_habits_charts_type: graph
+          plugin_habits_trim: no
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0.01%
+          config_timezone: Europe/Moscow
 
       - name: Detailed display
         uses: lowlighter/metrics@latest
@@ -57,7 +69,10 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_achievements: yes
-          plugin_achievements_only: sponsor, maintainer, octonaut
+          plugin_achievements_threshold: C
+          plugin_achievements_secrets: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_limit: 0
 
       - name: Repositories traffic
         uses: lowlighter/metrics@latest
@@ -66,6 +81,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: repositories
           plugin_traffic: yes
+          plugin_traffic_skipped: ""
 
       - name: WakaTime
         uses: lowlighter/metrics@latest
