--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,9 @@ jobs:
           plugin_habits: yes
           plugin_habits_from: 1000
           plugin_habits_days: 30
-          plugin_habits_facts: yes
+          plugin_habits_facts: no
           plugin_habits_charts: yes
-          plugin_habits_charts_type: graph
+          plugin_habits_charts_type: classic
           plugin_habits_trim: no
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0.01%
@@ -62,7 +62,7 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_threshold: C
           plugin_achievements_secrets: yes
-          plugin_achievements_display: detailed
+          plugin_achievements_display: compact
           plugin_achievements_limit: 0
 
       - name: Repositories traffic
