--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,8 @@
 name: Metrics
 on:
-  schedule:
-    - cron: "0 * * * *"
+  schedule: [{cron: "0 * * * *"}]
   workflow_dispatch:
-  push:
-    branches:
-      - master
-      - main
+  push: {branches: ["master", "main"]}
       
 jobs:
   github-metrics:
