--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,6 @@ on:
   schedule: [{cron: "0 * * * *"}]
   workflow_dispatch:
   push: {branches: ["master", "main"]}
-      
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -12,7 +11,9 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
 
       - name: Full-year calendar
         uses: lowlighter/metrics@latest
