--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,6 @@ jobs:
           filename: metrics.plugin.leetcode.svg
           token: NOT_NEEDED
           base: ""
+          plugin_leetcode_user: TheAndreyZakharov
           plugin_leetcode: yes
-          plugin_leetcode_sections: solved, skills, recent
-
+          plugin_leetcode_sections: solved, skills, recent          
